--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "scripts": {
     "tsc": "tsc",
     "build": "webpack",
-    "watch": "concurrently \"browser-sync start --server -w\" \" webpack --watch\""
+    "watch": "concurrently \"browser-sync start --server -w\" \" webpack --watch\"",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --watch-extensions ts -w -r ts-node/register src/**/*_test.ts"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.8",
     "@types/p5": "^0.7.2",
     "browser-sync": "^2.26.3",
     "concurrently": "^4.1.0",
+    "espower-typescript": "^9.0.2",
+    "mocha": "^6.1.4",
+    "power-assert": "^1.6.1",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.4.4",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   },
